--- a/projeto/index.html
+++ b/projeto/index.html
@@ -52,6 +52,9 @@
             <li class="nav-item ps-2">
               <button type="button" class="btn btn-primary ml-3" data-toggle="modal" data-target="#SigninModal">Registar</button>
             </li>
+            <li class="nav-item ps-2">
+              <button type="button" class="btn btn-primary" style="visibility: hidden;">Logout</button>
+            </li>
           </form>
         </div>
       </nav>
@@ -187,20 +190,19 @@
     </div>
   </footer>
 
-  <!-- Modal log In -->
+  <!-- MODAL LOGIN -->
   <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <div class="d-flex justify-content-center col-lg-11">
-          </div id="frmLogin">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <div>
+          
+          <form id="frmLogin">
             <div class="form-group d-flex justify-content-center">
               <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Login</h5>
             </div>
@@ -214,18 +216,16 @@
             </div>
             <div class="d-flex justify-content-center mb-3">
               <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3" data-dismiss="modal">Cancelar</button>
-              <!-- data-target="LINK PARA A PROXIMA PAGINA" -->
               <button type="submit" class="btn btn-primary navButton col-lg-3" id="btnLogin" data-target="">Login</button>   
             </div>
-            <div id="mdlRegisterMessage" class="col-lg-12 d-flex justify-content-center">
-            </div>
-          </div>
+            <div id="loginMessage" class="col-lg-12 d-flex justify-content-center"></div>
+          </form>  
         </div>
       </div>
     </div>
   </div>
 
-  <!--SignIn Modal-->
+  <!--MODAL REGISTAR-->
   <div class="modal fade" id="SigninModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -238,62 +238,63 @@
           </button>
         </div>
         <div class="modal-body">
-          <div id="frmRegister">
-            <div class="form-group d-flex justify-content-center">
-              <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Registo</h5>
-            </div>
-            <div class="form-group d-flex justify-content-center">
-              <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_username_register"
-                aria-describedby="usernameHelp" placeholder="Nome de Utilizador">
-            </div>
-            <div class="form-group d-flex justify-content-center">
-              <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_fullname_register"
-                aria-describedby="fullnameHelp" placeholder="Nome Completo">
-            </div>
-            <div class="form-group d-flex justify-content-center">
-              <input type="email" class="form-control col-lg-6 mt-2 modalField" id="txt_email_register"
-                aria-describedby="emailHelp" placeholder="E-mail">
-            </div>
-            <div class="form-group d-flex justify-content-center">
-              <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_address_register"
-                aria-describedby="addressHelp" placeholder="Endereço">
-            </div>
-            <div class="form-group d-flex justify-content-center">
-              <input type="tel" max="999999999" min="111111111" class="form-control col-lg-6 mt-2 modalField" id="txt_phone_register"
-                aria-describedby="phoneHelp" placeholder="Telefone">
-            </div>
-            <div class="form-group d-flex justify-content-center">
-              <select type="select" class="form-control col-lg-6 mt-2 mr-1 modalField" id="txt_gen_register">
-                <option value="" disabled selected>Escolha uma opção</option>
-                <option value="male">Masculino</option>
-                <option value="female">Feminino</option>
-              </select>
-            </div>
-            <div class="form-group d-flex justify-content-center">
-              <input type="date" name="bday" max="2021-06-20" min="1800-01-01"
-                class="form-control col-lg-6 mt-2 modalField" id="date_birthday_register">
-            </div>
-            <div class="form-group d-flex justify-content-center">
-              <input type="password" class="form-control col-lg-3 mt-3 mr-1 modalField" id="txt_password_register"
-                aria-describedby="weightHelp" placeholder="Password">
-              <input type="password" class="form-control col-lg-3 mt-3 mr-1 modalField" id="txt_confirmPassword_register"
-                aria-describedby="pwconfimHelp" placeholder="Confirm">
-            </div>
-            <div class="d-flex justify-content-center mb-3">
-              <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3 "
-                data-dismiss="modal">Cancelar</button>
-                <!-- data-target="LINK PARA A PROXIMA PAGINA" -->
-              <button type="submit" class="btn btn-primary navButton col-lg-3" id="btnRegister"
-                data-target="">Registar</button>
-            </div>
-            <div id="mdlRegisterMessage" class="col-lg-12 d-flex justify-content-center">  
-            </div>
-          </div>
+            <form id="frmRegister">
+              <div class="form-group d-flex justify-content-center">
+                <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Registo</h5>
+              </div>
+              <div class="form-group d-flex justify-content-center">
+                <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_username_register"
+                  aria-describedby="usernameHelp" placeholder="Nome de Utilizador">
+              </div>
+              <div class="form-group d-flex justify-content-center">
+                <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_fullname_register"
+                  aria-describedby="fullnameHelp" placeholder="Nome Completo">
+              </div>
+              <div class="form-group d-flex justify-content-center">
+                <input type="email" class="form-control col-lg-6 mt-2 modalField" id="txt_email_register"
+                  aria-describedby="emailHelp" placeholder="E-mail">
+              </div>
+              <div class="form-group d-flex justify-content-center">
+                <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_address_register"
+                  aria-describedby="addressHelp" placeholder="Endereço">
+              </div>
+              <div class="form-group d-flex justify-content-center">
+                <input type="tel" class="form-control col-lg-6 mt-2 modalField" id="txt_phone_register"
+                  aria-describedby="phoneHelp" placeholder="Telefone">
+              </div>
+              <div class="form-group d-flex justify-content-center">
+                <select type="select" class="form-control col-lg-6 mt-2 mr-1 modalField" id="txt_gender_register">
+                  <option value="" disabled selected>Escolha uma opção</option>
+                  <option value="male">Masculino</option>
+                  <option value="female">Feminino</option>
+                </select>
+              </div>
+              <div class="form-group d-flex justify-content-center">
+                <input type="date" name="bday" max="2021-06-20" min="1800-01-01"
+                  class="form-control col-lg-6 mt-2 modalField" id="date_birthday_register">
+              </div>
+              <div class="form-group d-flex justify-content-center">
+                <input type="password" class="form-control col-lg-3 mt-3 mr-1 modalField" id="txt_password_register"
+                  aria-describedby="weightHelp" placeholder="Password">
+                <input type="password" class="form-control col-lg-3 mt-3 mr-1 modalField" id="txt_confirmPassword_register"
+                  aria-describedby="pwconfimHelp" placeholder="Confirm">
+              </div>
+              <div class="d-flex justify-content-center mb-3">
+                <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3 "
+                  data-dismiss="modal">Cancelar</button>
+                <button type="submit" class="btn btn-primary navButton col-lg-3">Registar</button>
+              </div>
+              <div id="registerMessage" class="col-lg-12 d-flex justify-content-center"></div>
+            </form>
         </div>
       </div>
     </div>
   </div>
-  <!--SignIn Modal-->
+
+  <!--javascript-->
+  <script type="module" src="js/app.js"></script>
+
+
 </body>
 
 </html>
