--- a/projeto/index.html
+++ b/projeto/index.html
@@ -9,8 +9,6 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <link href="assets/img/icon.png" rel="icon">
-
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
@@ -27,7 +25,7 @@
   <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
-        <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">ajudacliente@covidtesting.com</a>
+        <i class="icofont-envelope"></i> <a href="">ajudacliente@covidtesting.com</a>
         <i class="icofont-phone"></i> +351 914 358 147
         <i class="icofont-google-map"></i> 981, R. Dom Sancho I, PT
       </div>
@@ -38,7 +36,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <a href="index.html" class="logo mr-auto"><img src="img\LOGO.png" alt="yes" class="img-fluid"></a>
+      <a href="index.html" class="logo mr-auto"><img src="img\LOGO.png" alt="" class="img-fluid"></a>
 
       <nav class="nav-menu d-none d-lg-block align-items-center">
         <ul>
@@ -51,11 +49,11 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="#loginModal" class="appointment-btn scrollto" data-toggle="modal" id="btnLogin">Login</a>
+      <a href="#loginModal" class="btn btn-primary" data-toggle="modal" id="btnLogin">Login</a>
 
-      <a href="#registerModal" class="appointment-btn scrollto" data-toggle="modal" id="btnRegister">Registar</a>
+      <a href="#registerModal" class="btn btn-primary" data-toggle="modal" id="btnRegister">Registar</a>
 
-      <a href="#" class="appointment-btn scrollto" style="visibility: hidden;" id="btnLogout">Logout</a>
+      <a href="#" class="btn btn-primary" style="visibility: hidden;" id="btnLogout">Logout</a>
 
       
 
@@ -452,7 +450,7 @@
                   data-msg="Please write something for us" placeholder="Mensagem"></textarea>
                 <div class="validate"></div>
               </div>
-              <div class="text-center"><a href="#" class="appointment-btn">Submeter</a>
+              <div class="text-center"><a href="#" class="btn btn-primary">Submeter</a>
               </div>
             </div>
 
@@ -469,11 +467,7 @@
   <footer id="footer">
 
     <div class="container d-md-flex py-4">
-      <div class="text-center">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Covid Test Booking</span></strong>. All Rights Reserved
-        </div>
-      </div>
+      &copy; Copyright <strong><span>Covid Test Booking</span></strong>. All Rights Reserved
     </div>
   </footer><!-- End Footer -->
 
