--- a/projeto/html/detailLab.html
+++ b/projeto/html/detailLab.html
@@ -163,21 +163,10 @@
         </div>
         <br>
         <div>
-            <button id="btnMarcar" href="#confirm" type="button" data-toggle="modal" class="btn btn-primary">Marcar Teste</button>
+            <button id="btnMarcar" href="#confirm" type="button" data-toggle="modal" class="btn1 btn-primary">Marcar Teste</button>
         </div>
         <br>
-        <!-- <section id="comments">
-            <p>
-                inserir comentarios aqui
-            </p>
-        </section> -->
-        <!-- <footer id="footer">
-            <div class="container d-md-flex py-4">
-              &copy; Copyright <strong><span>Covid Test Booking</span></strong>. All Rights Reserved
-            </div>
-        </footer> -->
     </div>
-    
     <div class="modal" id="confirm" tabindex="-1" role="dialog">
         <form id="frmConfirm">
             <div class="modal-dialog" role="document">
