--- a/projeto/html/profile.html
+++ b/projeto/html/profile.html
@@ -59,7 +59,7 @@
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">Username:</label>
-      <input type="text" class="form-control col-3  modalField" id="txt_username_edit" aria-describedby="usernameHelp">
+      <input type="text" class="form-control col-3  modalField" id="txt_username_edit" disabled aria-describedby="usernameHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">Nome Completo:</label>
